syntax = "proto2";

package serialize;

message Frontier {
  required int32 num_values = 1;
  required int32 focus_id = 2;

  message Graph {
    repeated int32 sources = 1;
    repeated int32 dests = 2;
  }

  required Graph use1 = 3;
  required Graph use2 = 4;
  required Graph mem_refs = 5;
  required Graph independence = 6;
  required Graph inv_unresolved = 7;
  repeated Graph unresolved = 8;
  repeated int32 value_types = 9;
}

message VectorPack {
  enum Kind {
    GENERAL = 0;
    STORE = 1;
    LOAD = 2;
  }

  required Kind kind = 1;
  optional int32 inst_id = 2;
  repeated int64 lanes = 3;
}

message Supervision {
  // State
  required Frontier frontier = 1;
  repeated VectorPack packs = 2;
  repeated float prob = 3;
}
